--- a/client/src/main/resources/public/css/style.css
+++ b/client/src/main/resources/public/css/style.css
@@ -67,6 +67,13 @@ h3{
     margin-bottom: 15px;
 }
 
+.console p {
+    margin-bottom: 0px;
+}
+.console {
+    font-size: 14px;
+}
+
 .nodata{
     background: #eeeeee;
     height: 100px;
